Fix for wrong letter-spacing (from -2% to -0.02em) in text.

--- a/stylesheets/form/_text/form_text_s1.css
+++ b/stylesheets/form/_text/form_text_s1.css
@@ -3,5 +3,5 @@
     font-family: Inter;
     font-size: 18px;
     line-height: 120%;
-    letter-spacing: -2%;
+    letter-spacing: -0.02em;
 }
